--- a/DeLivre/DeLivre/Views/Cardapios.xaml
+++ b/DeLivre/DeLivre/Views/Cardapios.xaml
@@ -1,9 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
-             xmlns:cardView="clr-namespace:DeLivre"    
-             xmlns:flv="clr-namespace:DLToolkit.Forms.Controls;assembly=DLToolkit.Forms.Controls.FlowListView"
-             xmlns:local1="clr-namespace:DeLivre.Controls"
+             xmlns:expandable="clr-namespace:Expandable;assembly=ExpandableView"
              xmlns:input="clr-namespace:Plugin.InputKit.Shared.Controls;assembly=Plugin.InputKit"
              xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin"
              x:Class="DeLivre.Views.Cardapios" 
@@ -28,16 +26,20 @@
     </NavigationPage.TitleView>
     <StackLayout Padding="5,5,5,0" BackgroundColor="White" Orientation="Vertical">
 
-        <SearchBar x:Name="CardapioPesquisa" Placeholder="Pesquise por um lanche!" HeightRequest="40" BackgroundColor="White" TextChanged="CardapioPesquisa_TextChanged" />
+        <!--<SearchBar x:Name="CardapioPesquisa" Placeholder="Pesquise por um lanche!" HeightRequest="40" BackgroundColor="White" TextChanged="CardapioPesquisa_TextChanged" />-->
+
+        <input:Dropdown x:Name="TipoDrop"
+                        BorderColor="#EF5350" Color="#EF5350"                                                                                                                                                                                            
+                        SelectedItemChanged="TipoDrop_SelectedItemChanged"
+                        Placeholder="Pesquise por um tipo"/>
 
         <ListView x:Name="ListaCardapio"                   
-                      BackgroundColor="White"                    
-                      SeparatorColor="{StaticResource grayPrimary}"
-                      VerticalOptions="FillAndExpand"                  
-                      HasUnevenRows="true"                                   
-                      ItemSelected="ListaCardapio_ItemSelected"
-                      ItemsSource="{Binding Cardapios}"
-                      CachingStrategy="RecycleElement">
+                  BackgroundColor="White" HasUnevenRows="true"                    
+                  SeparatorColor="{StaticResource grayPrimary}"
+                  VerticalOptions="FillAndExpand"                                                                     
+                  ItemSelected="ListaCardapio_ItemSelected"
+                  ItemsSource="{Binding Cardapios}"
+                  CachingStrategy="RecycleElement">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
@@ -45,22 +47,20 @@
                             <StackLayout>
                                 <StackLayout Orientation="Horizontal">
                                     <Label Text="{Binding Tipo, StringFormat=' {0},'}" 
-                                                       FontSize="15"
-                                                       FontAttributes="Bold"                                      
-                                                       Margin="5"
-                                                       TextColor="#EF5350" />
+                                           FontSize="15"
+                                           FontAttributes="Bold"                                      
+                                           Margin="5"
+                                           TextColor="#EF5350" />
 
                                     <Label x:Name="NomeLanche" Text="{Binding Nome}" 
-                                                       FontSize="13"                                         
-                                                       Margin="-5,7"
-                                                       TextColor="{StaticResource asphaltPrimary}" />
+                                           FontSize="13" Margin="-5,7"                                                                                  
+                                           TextColor="{StaticResource asphaltPrimary}" />
 
                                 </StackLayout>
 
                                 <Label Text="{Binding Descricao, StringFormat='({0})'}" 
-                                                   FontSize="16"
-                                                   Margin="3,-10"
-                                                   TextColor="{StaticResource grayPrimary}" />
+                                       FontSize="16" Margin="3,-10"                                                   
+                                       TextColor="{StaticResource grayPrimary}" />
 
                             </StackLayout>
 
@@ -75,9 +75,9 @@
 
                                 <StackLayout Orientation="Horizontal" Grid.Column="0" Grid.Row="0" Margin="5,0,5,0" HorizontalOptions="EndAndExpand">
                                     <Label Text="{Binding ValorExibicao}" 
-                                                         Grid.Row="0" Grid.Column="1" TextColor="#E53935" 
-                                                         FontAttributes="Bold" VerticalTextAlignment="Center" 
-                                                         HorizontalTextAlignment="End" FontSize="13" />
+                                           Grid.Row="0" Grid.Column="1" TextColor="#E53935" 
+                                           FontAttributes="Bold" VerticalTextAlignment="Center" 
+                                           HorizontalTextAlignment="End" FontSize="13" />
                                 </StackLayout>
                             </Grid>
                         </StackLayout>
@@ -87,3 +87,5 @@
         </ListView>
     </StackLayout>
 </ContentPage>
+
+
