--- a/DeLivre/DeLivre/Views/Detalhe/AcaiNormal.xaml
+++ b/DeLivre/DeLivre/Views/Detalhe/AcaiNormal.xaml
@@ -110,18 +110,18 @@
                              Increment="1" Margin="20,0,20,0" />
 
                     <Label x:Name="lbl_InfoComplementar" FontSize="15" Margin="0,5,0,0" FontAttributes="Bold" 
-                           HorizontalTextAlignment="Center" Text="Informações Pessoais:"                              
+                           HorizontalTextAlignment="Center" Text="Observação:"                              
                            TextColor="{StaticResource asphaltPrimary}"/>
 
-                    <Entry x:Name="Lbl_Troca" Placeholder="Ex.: Trocar Granola por Morango" 
-                           Margin="0,20" HeightRequest="60" 
+                    <Entry x:Name="Lbl_Troca" Placeholder="Ex.: Tirar a granola, sabor da calda etc" 
+                           Margin="0,10" HeightRequest="60"
                            HorizontalTextAlignment="Center" FontSize="13"
                            WidthRequest="200"/>
 
                 </StackLayout>
             </StackLayout>
         </ScrollView>
-        <Button x:Name="btn_selecionar" Margin="0,20" Text="Adicionar ao Pedido!" 
+        <Button x:Name="btn_selecionar" Margin="0,5,0,5" Text="Adicionar ao Pedido!" 
                 BackgroundColor="#EF5350" Visual="Material" TextColor="White" 
                 Clicked="Btn_selecionar_Clicked"/>
     </StackLayout>
