--- a/DeLivre/DeLivre/Views/Detalhe/Detalhes.xaml
+++ b/DeLivre/DeLivre/Views/Detalhe/Detalhes.xaml
@@ -67,10 +67,10 @@
                                          Increment="1" Margin="20,0,20,0" />
 
                     <Label x:Name="lbl_InfoComplementar" FontSize="15" Margin="0,5,0,0" FontAttributes="Bold" 
-                           HorizontalTextAlignment="Center" Text="Informações Pessoais:"                   
+                           HorizontalTextAlignment="Center" Text="Observação:"                   
                            TextColor="{StaticResource asphaltPrimary}"/>
                     
-                    <Entry x:Name="Lbl_Troca" Placeholder="Ex.: Sem cebola." 
+                    <Entry x:Name="Lbl_Troca" Placeholder="Ex.: Tirar cebola, troca de itens etc." 
                            Margin="0,5" HeightRequest="60" WidthRequest="200"
                            HorizontalTextAlignment="Center" FontSize="13" />
                 </StackLayout>
