--- a/DeLivre/DeLivre/Views/Detalhe/Frios.xaml
+++ b/DeLivre/DeLivre/Views/Detalhe/Frios.xaml
@@ -110,10 +110,10 @@
                              Increment="1" Margin="20,0,20,0" />
 
                     <Label x:Name="lbl_InfoComplementar" FontSize="15" Margin="0,5,0,0" FontAttributes="Bold" 
-                           HorizontalTextAlignment="Center" Text="Informações Pessoais:"                   
+                           HorizontalTextAlignment="Center" Text="Observação:"                   
                            TextColor="{StaticResource asphaltPrimary}"/>
 
-                    <Entry x:Name="Lbl_Troca" Placeholder="Ex.: " 
+                    <Entry x:Name="Lbl_Troca" Placeholder="Ex.: Sabor da calda, outros adicionais etc" 
                            Margin="0,5" HeightRequest="60" WidthRequest="200"
                            HorizontalTextAlignment="Center" FontSize="13" />
 
