--- a/DeLivre/DeLivre/Views/Detalhe/Pizza.xaml
+++ b/DeLivre/DeLivre/Views/Detalhe/Pizza.xaml
@@ -75,10 +75,10 @@
                              Increment="1" Margin="20,0,20,0" />
 
                     <Label x:Name="lbl_InfoComplementar" FontSize="15" Margin="0,5,0,0" FontAttributes="Bold" 
-                           HorizontalTextAlignment="Center" Text="Informações Pessoais:"                   
+                           HorizontalTextAlignment="Center" Text="Observação:"                   
                            TextColor="{StaticResource asphaltPrimary}"/>
 
-                    <Entry x:Name="Lbl_Troca" Placeholder="Ex.: Sem cebola." 
+                    <Entry x:Name="Lbl_Troca" Placeholder="Ex.: Tirar a cebola, metade calabresa etc" 
                            Margin="0,5" HeightRequest="60" WidthRequest="200"
                            HorizontalTextAlignment="Center" FontSize="13" />
 
