--- a/DeLivre/DeLivre/Views/Info.xaml
+++ b/DeLivre/DeLivre/Views/Info.xaml
@@ -18,162 +18,166 @@
     </pages:PopupPage.Animation>
 
     <StackLayout WidthRequest="350" HeightRequest="400" BackgroundColor="White" Padding="5" IsClippedToBounds="True" HorizontalOptions="Center" VerticalOptions="Center">
-        <cardView:CardView x:Name="CardEstabelecimento" BackgroundColor="White" CardViewHasShadow="True">
-            <cardView:CardView.CardViewContent>
-                <StackLayout x:Name="Stack" 
+        <ScrollView>
+            <StackLayout>
+                <cardView:CardView x:Name="CardEstabelecimento" BackgroundColor="White" CardViewHasShadow="True">
+                    <cardView:CardView.CardViewContent>
+                        <StackLayout x:Name="Stack" 
                              HorizontalOptions="Center"                                         
                              VerticalOptions="Center">
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="100"/>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="120"/>
-                        </Grid.ColumnDefinitions>
-                        <controls:CircleImage x:Name="ImagemEstab" Grid.Column="1" 
-                                              BorderColor="#EF5350" 
-                                              BorderThickness="2" 
-                                              Margin="0,-40,0,0" 
-                                              WidthRequest="300" 
-                                              HeightRequest="300"                                                 
-                                              Aspect="AspectFit"/>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="100"/>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="120"/>
+                                </Grid.ColumnDefinitions>
+                                <controls:CircleImage x:Name="ImagemEstab" Grid.Column="1" 
+                                                      BorderColor="#EF5350" 
+                                                      BorderThickness="2" 
+                                                      Margin="0,-40,0,0" 
+                                                      WidthRequest="300" 
+                                                      HeightRequest="300"                                                 
+                                                      Aspect="AspectFit"/>
 
-                        <!--<Label x:Name="lbl_Entrega"                                              
+                                <!--<Label x:Name="lbl_Entrega"                                              
                                Grid.Column="0"
                                Text="ENTREGA" 
                                HorizontalTextAlignment="Center"
                                TextColor="#E53935"                              
                                FontSize="14" FontAttributes="Bold"/>-->
 
-                        <Label                                      
-                               Grid.Column="0"
-                               Text="TEMPO"  Margin="0, 17"
-                               HorizontalTextAlignment="Center"
-                               TextColor="{StaticResource asphaltPrimary}"                              
-                               FontSize="12" FontAttributes="Bold"/>
-                        
-                        <Label x:Name="lbl_Tempo"                              
-                               Grid.Column="0"
-                               HorizontalTextAlignment="Center"
-                               TextColor="{StaticResource asphaltPrimary}"
-                               Margin="0,30,0,0"
-                               FontSize="13"/>
+                                <Label                                      
+                                       Grid.Column="0"
+                                       Text="TEMPO" Margin="0, 17"
+                                       HorizontalTextAlignment="Center"
+                                       TextColor="{StaticResource asphaltPrimary}"                              
+                                       FontSize="12" FontAttributes="Bold"/>    
 
-                        <Label x:Name="lbl_TitleFrete"                                              
-                               Grid.Column="0"
-                               Text="FRETE" Margin="0,47"
-                               HorizontalTextAlignment="Center"
-                               TextColor="{StaticResource asphaltPrimary}"                              
-                               FontSize="12" FontAttributes="Bold"/>
-                        
-                        <Label x:Name="lbl_Frete"                                            
-                               Grid.Column="0"
-                               HorizontalTextAlignment="Center"
-                               TextColor="{StaticResource asphaltPrimary}"
-                               Margin="0,60,0,0"
-                               FontSize="13" />
-                       
-                        
-                        <!--<Label x:Name="Entrega"                                             
+                                <Label x:Name="lbl_Tempo"                              
+                                       Grid.Column="0"
+                                       HorizontalTextAlignment="Center"
+                                       TextColor="{StaticResource asphaltPrimary}"
+                                       Margin="0,30,0,0"
+                                       FontSize="13"/>
+
+                                <Label x:Name="lbl_TitleFrete"                                              
+                                       Grid.Column="0"
+                                       Text="FRETE" Margin="0,47"
+                                       HorizontalTextAlignment="Center"
+                                       TextColor="{StaticResource asphaltPrimary}"                              
+                                       FontSize="12" FontAttributes="Bold"/>
+
+                                <Label x:Name="lbl_Frete"                                            
+                                       Grid.Column="0"
+                                       HorizontalTextAlignment="Center"
+                                       TextColor="{StaticResource asphaltPrimary}"
+                                       Margin="0,60,0,0"
+                                       FontSize="13" />
+
+
+                                <!--<Label x:Name="Entrega"                                             
                                Grid.Column="2"
                                HorizontalTextAlignment="Center"
                                Text="FUNCIONAMENTO"
                                TextColor="#E53935"                              
                                FontSize="14" FontAttributes="Bold"/>-->
 
-                        <Label x:Name="lbl_pedidominimo"                                              
-                               Grid.Column="2" Margin="0,17"
-                               Text="PEDIDO MINIMO" 
-                               HorizontalTextAlignment="Center"
-                               TextColor="{StaticResource asphaltPrimary}"                              
-                               FontSize="12" FontAttributes="Bold"/>
-                        
-                        <Label x:Name="lbl_Horario_Funcionamento"                                             
-                               TextColor="{StaticResource asphaltPrimary}"
-                               Grid.Column="2" 
-                               HorizontalTextAlignment="Center"
-                               Margin="0,30,0,0"
-                               FontSize="13"/>
+                                <Label x:Name="lbl_pedidominimo"                                              
+                                       Grid.Column="2" Margin="0,17"
+                                       Text="PEDIDO MINIMO" 
+                                       HorizontalTextAlignment="Center"
+                                       TextColor="{StaticResource asphaltPrimary}"                              
+                                       FontSize="12" FontAttributes="Bold"/>
 
-                        <Label Text="LOCAL"                                        
-                               Grid.Column="2" Margin="0,47"                              
-                               HorizontalTextAlignment="Center"
-                               TextColor="{StaticResource asphaltPrimary}"                              
-                               FontSize="12" FontAttributes="Bold"/>
-                        
-                        <Label x:Name="lbl_Local"                                              
-                               Grid.Column="2"
-                               Margin="0,60,0,0"
-                               HorizontalTextAlignment="Center"
-                               TextColor="{StaticResource asphaltPrimary}"                              
-                               FontSize="13"/>
-                    </Grid>
-                </StackLayout>
-            </cardView:CardView.CardViewContent>
-        </cardView:CardView>
-        <Label x:Name="lbl_Endereco" Margin="0,-55"                                     
-                   HorizontalTextAlignment="Center"
-                   TextColor="{StaticResource asphaltPrimary}"                         
-                   FontAttributes="Italic"
-                   FontSize="13" />
+                                <Label x:Name="lbl_Horario_Funcionamento"                                             
+                                       TextColor="{StaticResource asphaltPrimary}"
+                                       Grid.Column="2" 
+                                       HorizontalTextAlignment="Center"
+                                       Margin="0,30,0,0"
+                                       FontSize="13"/>
 
-        <Label x:Name="lbl_Descricao" Margin="0,55"                                       
-                   HorizontalTextAlignment="Center"
-                   TextColor="{StaticResource asphaltPrimary}"                           
-                   FontSize="13" />
+                                <Label Text="LOCAL"                                        
+                                       Grid.Column="2" Margin="0,47"                              
+                                       HorizontalTextAlignment="Center"
+                                       TextColor="{StaticResource asphaltPrimary}"                              
+                                       FontSize="12" FontAttributes="Bold"/>
 
-        <Label Text="HORÁRIOS DE FUNCIONAMENTO" FontAttributes="Bold" 
-               TextColor="{StaticResource asphaltPrimary}" Margin="0,-45,0,10" 
-               HorizontalTextAlignment="Center" FontSize="14"/>
+                                <Label x:Name="lbl_Local"                                              
+                                       Grid.Column="2"
+                                       Margin="0,60,0,0"
+                                       HorizontalTextAlignment="Center"
+                                       TextColor="{StaticResource asphaltPrimary}"                              
+                                       FontSize="13"/>
+                            </Grid>
+                        </StackLayout>
+                    </cardView:CardView.CardViewContent>
+                </cardView:CardView>
+                <Label x:Name="lbl_Endereco" Margin="0,-55"                                     
+                       HorizontalTextAlignment="Center"
+                       TextColor="{StaticResource asphaltPrimary}"                         
+                       FontAttributes="Italic"
+                       FontSize="13" />
 
-        <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand" Margin="0,0,0,0">
-            <StackLayout Spacing="2" Orientation="Vertical" VerticalOptions="Start" Margin="5,0,5,0">
-                <Label x:Name="lbl_Segunda"                                        
-                       HorizontalTextAlignment="Start"
+                <Label x:Name="lbl_Descricao" Margin="0,55"                                       
+                       HorizontalTextAlignment="Center"
                        TextColor="{StaticResource asphaltPrimary}"                           
                        FontSize="13" />
-                <Label x:Name="lbl_Terca"                                        
-                       HorizontalTextAlignment="Start"
-                       TextColor="{StaticResource asphaltPrimary}"                           
-                       FontSize="13"/>
-                <Label x:Name="lbl_Quarta"                                       
-                       HorizontalTextAlignment="Start"
-                       TextColor="{StaticResource asphaltPrimary}"                           
-                       FontSize="13"/>
-                <Label x:Name="lbl_Quinta"               
-                       HorizontalTextAlignment="Start"
-                       TextColor="{StaticResource asphaltPrimary}"                           
-                       FontSize="13"/>
-            </StackLayout>
 
-            <StackLayout Spacing="2" Orientation="Vertical" Margin="5,0,-10,0">
-                <Label x:Name="lbl_Sexta"                                       
-                       HorizontalTextAlignment="End"
-                       TextColor="{StaticResource asphaltPrimary}"                           
-                       FontSize="13"/>
-                <Label x:Name="lbl_Sabado"                                        
-                       HorizontalTextAlignment="End"
-                       TextColor="{StaticResource asphaltPrimary}"                           
-                       FontSize="13"/>
-                <Label x:Name="lbl_Domingo"                                       
-                       HorizontalTextAlignment="End"
-                       TextColor="{StaticResource asphaltPrimary}"                           
-                       FontSize="13"/>
-            </StackLayout>
-        </StackLayout>
+                <Label Text="HORÁRIOS DE FUNCIONAMENTO" FontAttributes="Bold" 
+                       TextColor="{StaticResource asphaltPrimary}" Margin="0,-45,0,10" 
+                       HorizontalTextAlignment="Center" FontSize="14"/>
 
-        <Label Text="REDES SOCIAIS" FontAttributes="Bold" 
-               TextColor="{StaticResource asphaltPrimary}"                
-               HorizontalTextAlignment="Center" FontSize="14"/>
-        
-            <Button x:Name="btn_instagram" FontSize="12"
-                Text="SIGA-NOS NO INSTAGRAM"
-                TextColor="White"
-                BorderRadius="10" 
-                WidthRequest="300"
-                HeightRequest="40"                         
-                Clicked="Btn_instagram_Clicked"
-                BackgroundColor="#E53935"
-                HorizontalOptions="Center" 
-                VerticalOptions="Center"></Button>
+                <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand" Margin="0,0,0,0">
+                    <StackLayout Spacing="2" Orientation="Vertical" VerticalOptions="Start" Margin="5,0,5,0">
+                        <Label x:Name="lbl_Segunda"                                        
+                               HorizontalTextAlignment="Start"
+                               TextColor="{StaticResource asphaltPrimary}"                           
+                               FontSize="13" />
+                        <Label x:Name="lbl_Terca"                                        
+                               HorizontalTextAlignment="Start"
+                               TextColor="{StaticResource asphaltPrimary}"                           
+                               FontSize="13"/>
+                        <Label x:Name="lbl_Quarta"                                       
+                               HorizontalTextAlignment="Start"
+                               TextColor="{StaticResource asphaltPrimary}"                           
+                               FontSize="13"/>
+                        <Label x:Name="lbl_Quinta"               
+                               HorizontalTextAlignment="Start"
+                               TextColor="{StaticResource asphaltPrimary}"                           
+                               FontSize="13"/>
+                    </StackLayout>
+
+                    <StackLayout Spacing="2" Orientation="Vertical" Margin="5,0,-10,0">
+                        <Label x:Name="lbl_Sexta"                                       
+                               HorizontalTextAlignment="End"
+                               TextColor="{StaticResource asphaltPrimary}"                           
+                               FontSize="13"/>
+                        <Label x:Name="lbl_Sabado"                                        
+                               HorizontalTextAlignment="End"
+                               TextColor="{StaticResource asphaltPrimary}"                           
+                               FontSize="13"/>
+                        <Label x:Name="lbl_Domingo"                                       
+                               HorizontalTextAlignment="End"
+                               TextColor="{StaticResource asphaltPrimary}"                           
+                               FontSize="13"/>
+                    </StackLayout>
+                </StackLayout>
+
+                <Label Text="REDES SOCIAIS" FontAttributes="Bold" 
+                       TextColor="{StaticResource asphaltPrimary}"                
+                       HorizontalTextAlignment="Center" FontSize="14"/> 
+
+                <Button x:Name="btn_instagram" FontSize="12"
+                        Text="SIGA-NOS NO INSTAGRAM"
+                        TextColor="White"
+                        BorderRadius="10" 
+                        WidthRequest="300"
+                        HeightRequest="40"                         
+                        Clicked="Btn_instagram_Clicked"
+                        BackgroundColor="#E53935"
+                        HorizontalOptions="Center" 
+                        VerticalOptions="Center"></Button>
+            </StackLayout>
+        </ScrollView>
     </StackLayout>
 </pages:PopupPage>
