--- a/DeLivre/DeLivre/Views/Estabelecimentos.xaml
+++ b/DeLivre/DeLivre/Views/Estabelecimentos.xaml
@@ -19,25 +19,27 @@
                                   HorizontalOptions="CenterAndExpand" BorderThickness="1" 
                                   BorderColor="White" Margin="20,0,0,-5" Aspect="AspectFit"/>
 
-            <Label                     x:Name="lbl_Nome"                 
-                                       Grid.Column="0"
-                                       Margin="0,10"  Grid.Row="0"
-                                       HorizontalTextAlignment="Center"
-                                       TextColor="{StaticResource asphaltPrimary}"                              
-                                       FontSize="12" FontAttributes="Bold" />
+            <Label x:Name="lbl_Nome"                 
+                   Grid.Column="0"
+                   Margin="0,22" Grid.Row="0"
+                   HorizontalTextAlignment="Center"
+                   TextColor="{StaticResource asphaltPrimary}"                              
+                   FontSize="12" FontAttributes="Bold" />
 
             <Label x:Name="lbl_Local"                              
-                                       Grid.Column="0"  Grid.Row="0"
-                                       HorizontalTextAlignment="Center"
-                                       TextColor="{StaticResource asphaltPrimary}"
-                                       Margin="0,25,0,0"
-                                       FontSize="13"/>
-            <Label x:Name="lbl_Mudar"          Grid.Row="0"             
-                                       Grid.Column="0" Text="(Mudar)"
-                                       HorizontalTextAlignment="Center"
-                                       TextColor="{StaticResource asphaltPrimary}"
-                                       Margin="0,38,0,0"
-                                       FontSize="13">
+                   Grid.Column="0" Grid.Row="0"
+                   HorizontalTextAlignment="Center"
+                   TextColor="{StaticResource asphaltPrimary}"
+                   Margin="0,35,0,0"
+                   FontSize="13"/>
+            
+            <Label x:Name="lbl_Mudar"
+                   Grid.Row="0"       
+                   Grid.Column="0" Text="(Mudar)"
+                   HorizontalTextAlignment="Center"
+                   TextColor="{StaticResource asphaltPrimary}"
+                   Margin="0,48,0,0"
+                   FontSize="13">
                 <Label.GestureRecognizers>
                     <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" />
                 </Label.GestureRecognizers>
